[gd_scene load_steps=3 format=3 uid="uid://c8rfrygk37wvo"]

[ext_resource type="Texture2D" uid="uid://cuo1bx3kl00oa" path="res://assets/sprites/silhouette.png" id="1_5h5vl"]
[ext_resource type="Script" uid="uid://b038dtlwr7a5d" path="res://scripts/dress up/dessert.gd" id="1_7ppj7"]

[node name="Dessert" type="Node2D"]
script = ExtResource("1_7ppj7")

[node name="silhouette" type="Sprite2D" parent="."]
texture = ExtResource("1_5h5vl")
centered = false

[node name="Node2D" type="Node2D" parent="."]

[node name="UpperPiece" type="Sprite2D" parent="Node2D"]
centered = false

[node name="MainPiece" type="Sprite2D" parent="Node2D"]
position = Vector2(0, 40)
centered = false

[node name="LowerPiece" type="Sprite2D" parent="Node2D"]
position = Vector2(0, 80)
centered = false
